==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

- Implemented a thread-utilization down-scaling logic which dynamically adapts
  the number of threads used for ``SELECT`` queries involving aggregations to
  avoid running into ``RejectedExcecution`` errors if there are many shards per
  node involved in the queries.

- Changed internals for DELETE and UPDATE queries which should generally result
  in a performance increase for queries which only match a subset of the rows
  and avoid ``CircuitBreakingException`` errors. But it might result in a
  slight performance decrease if the queries match all
  or almost all records.

Fixes
=====

- Fixed an issue that prevented blob tables from showing up or triggering the
  system check indicating that they'll need to be re-created in order to update
  to CrateDB 3.0+

- Fixed an issue that caused an UnsupportedFeatureException to be thrown for
  queries with a ``WHERE`` clause which contains an equality comparison that
  references a table column in both sides. E.g.::

    SELECT * FROM t
    WHERE t.i = abs(t.i)

- Handle ``STRING_ARRAY`` as argument type for user-defined functions correctly
  to prevent an ``ArrayStoreException``.

- Fixed an issue that could cause ``HTTP`` requests using empty ``bulk_args``
  to fail.

- Fixed NullPointerException which could be thrown when deleting a table and
  querying `size` from the `sys.shards` table.